--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,23 +10,12 @@ set_target_properties(${PROJECT_NAME} PROPERTIES CMAKE_CXX_STANDARD 11)
 
 configure_file(include/${PROJECT_NAME}_config.h.in ${PROJECT_NAME}_config.h)
 
-# include(FetchContent)
-
-# option(BUILD_SHARED_LIBS "override the BUILD_SHARED_LIBS in LVGL cmake files" ON)
-# FetchContent_Declare(
-# lvgl
-# GIT_REPOSITORY https://github.com/lvgl/lvgl.git
-# GIT_TAG v8.3.10
-# )
-# FetchContent_MakeAvailable(lvgl)
-# set_target_properties(lvgl PROPERTIES CMAKE_C_STANDARD 11)
-# target_compile_options(lvgl PUBLIC -DLV_CONF_PATH=${CMAKE_CURRENT_SOURCE_DIR}/src/lv_conf.h)
-# target_link_libraries(${PROJECT_NAME} PUBLIC lvgl)
 target_include_directories(${PROJECT_NAME}
     PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     PRIVATE
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
+    ${CMAKE_CURRENT_SOURCE_DIR}/src
+    ${CMAKE_CURRENT_BINARY_DIR}
 )
 
 include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/docs.cmake)
