--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,6 @@ file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c)
 add_library(${PROJECT_NAME} SHARED ${SOURCES})
 set_target_properties(${PROJECT_NAME} PROPERTIES CMAKE_CXX_STANDARD 11)
 
-configure_file(include/${PROJECT_NAME}_config.h.in ${PROJECT_NAME}_config.h)
-
 target_include_directories(${PROJECT_NAME}
     PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
@@ -20,3 +18,6 @@ target_include_directories(${PROJECT_NAME}
 
 include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/docs.cmake)
 include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/tests.cmake)
+include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/options.cmake)
+
+configure_file(include/${PROJECT_NAME}_config.h.in ${PROJECT_NAME}_config.h)
