--- a/include/librecnc_config.h.in
+++ b/include/librecnc_config.h.in
@@ -1,3 +1,4 @@
 #define LC_CORE_VERSION "0.0.0"
 #define LC_LOG_LEVEL ${LC_LOG_LEVEL_INT}
 #define LC_GCODE_PARSER_ENABLE ${LC_GCODE_PARSER_BUILD_ENABLE}
+#define LC_GCODE_PARAMETER_SUPPORT ${LC_GCODE_PARAMETER_SUPPORT}
