add option for Ocommand support

--- a/include/librecnc_config.h.in
+++ b/include/librecnc_config.h.in
@@ -2,3 +2,4 @@
 #define LC_LOG_LEVEL ${LC_LOG_LEVEL_INT}
 #define LC_GCODE_PARSER_ENABLE ${LC_GCODE_PARSER_BUILD_ENABLE}
 #define LC_GCODE_PARAMETER_SUPPORT ${LC_GCODE_PARAMETER_SUPPORT}
+#define LC_SUPPORT_O_COMMANDS ${LC_SUPPORT_O_COMMANDS}
